--- a/moa/src/main/resources/application.properties
+++ b/moa/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.config.import=optional:./db.properties
 spring.profiles.active=dev
 
 #If you want to use existing data, change the option form ddl-auto to none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.jpa.properties.format_sql=true
@@ -16,3 +16,6 @@ spring.jpa.properties.show_sql=true
 
 
 logging.level.org.hibernate.sql=debug
+
+#security logging
+#logging.level.org.springframework.security=DEBUG
